Resolve image scaling issue on iOS

--- a/src/styles/card.module.css
+++ b/src/styles/card.module.css
@@ -21,6 +21,7 @@ img {
   height: 280px;
   object-fit: cover;
   padding: 0 10.5px;
+  width: 100%;
 }
 
 .card-text {
